--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,11 +1,21 @@
 {
-  "extensions": [
-    "GitHub.github-vscode-theme"
-    // Additional Extensions Here
-  ],
-  "onCreateCommand": "echo PS1='\"$ \"' >> ~/.bashrc",
+  "dockerComposeFile": "docker-compose.yaml",
+  "service": "app",
+  "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "GitHub.github-vscode-theme",
+        "vscjava.vscode-java-pack",
+        "vscjava.vscode-java-test",
+        "vscjava.vscode-java-debug",
+        "redhat.java",
+        "ms-azuretools.vscode-docker"
+      ]
+    }
+  },
+  "forwardPorts": [5432],
+  "features":{},
+  "onCreateCommand": "echo >> ~/.bashrc && echo PS1='\"$ \"' >> ~/.bashrc",
   "postAttachCommand": "git pull --all"
-  
-  // Update welcome text and set terminal prompt to '$ '
 }
-// DevContainer Reference: https://code.visualstudio.com/docs/remote/devcontainerjson-reference
